# health_analyzer

./: .env.example  .gitignore  AUDIT_COCKPIT_2026-03-04.md  AUDIT_COMPLETE_2026-03-05.md  Bord.command  CLAUDE.md  CLAUDE_CHROME.md  DESIGN_SYSTEM.md  GUIDE_LANCEMENT.md  Lancer_Board.command  Lancer_PerformOS.command  OPERATIONS.md  README_APP.md  README_DESKTOP.md  ROADMAP_COCKPIT_2026.md  SKILL.md  TROUBLESHOOTING.md  UI_AUDIT_PILOTAGE.md  backup_local.sh  board.desktop  board.sh  build_dashboard.py  cockpit_server.py  create_app.sh  create_board_app.sh  create_desktop_shortcut.sh  create_simple_app.sh  diagnose.py  diagnose_calendar.py  diagnose_sync.py  final_check.sh  garmin_sync.py  garmin_sync_full.py  health_analyzer.py  launch.py  launch_simple.sh  launch_terminal.sh  main.py  package-lock.json  pyproject.toml  (+24 more)
.claude/: launch.json  settings.json
.claude/hooks/: session-start.sh
.claude/rules/: architecture.md  workflow.md
.github/workflows/: ci.yml
_debug/: AUDIT_COCKPIT_2026-03-04.md  UI_AUDIT_PILOTAGE.md  schema.txt
_legacy/: README_DESKTOP.md  TROUBLESHOOTING.md  build_dashboard.py  generator.py  generator_premium.py  launch.py  main.py  server_simple.py
_legacy/reports/: dashboard.html  dashboard_2026-03-01.html  dashboard_2026-03-03.html
analytics/: muscle_groups.py  planner.py  sports_agent.py  training_load.py
api/: deps.py  main.py
api/routes/: activities.py  calendar.py  health.py  muscles.py  planner.py  training.py
dashboard/: generator.py  generator_premium.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/cockpit/: page.tsx
frontend/app/idees/: page.tsx
frontend/app/sante/: page.tsx
frontend/app/semaine/: page.tsx
frontend/lib/: api.ts  constants.ts  types.ts  utils.ts  week-utils.ts
integrations/: CHATGPT_ATLAS_SETUP.md  __init__.py  apple_calendar.py
pipeline/: parse_apple_health.py  parse_garmin_connect.py  parse_strava_fit.py  schema.py
reports/: dashboard.html  dashboard_v3.html  health_report_2026-03-01.html  health_report_2026-03-08.html  sport_dashboard_2026-03-01.html
scripts/: Lancer_PerformOS_Terminal.command  create_desktop_shortcut.sh  create_simple_app.sh  install_schedule.sh  seed_demo.py  setup_autorun.sh  start_cockpit.sh  stop_cockpit.sh
tests/: __init__.py  conftest.py  test_dedup.py  test_muscle_groups.py  test_pipeline.py  test_planner.py  test_sync.py  test_sync.sh  test_training_load.py
(+51 files in other folders)
